src/validation/tests/snapshots/rusty__validation__tests__variable_validation_tests__output_variables_must_not_be_assignable_outside_of_their_scope.snap
---
source: src/validation/tests/variable_validation_tests.rs
expression: "&diagnostics"
---
error[E037]: VAR_OUTPUT variables cannot be assigned outside of their scope.
   ┌─ <internal>:19:13
   │
19 │             fb.out1 := 1;
   │             ^^^^^^^^^^^^ VAR_OUTPUT variables cannot be assigned outside of their scope.
